<resources>
    <string name="app_name">Profile</string>
    <string name="career">Career</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="home_address">Home address</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">VIEW my contacts</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="vkontakte">Vkontakte</string>
    <string name="register">REGISTER</string>
    <string name="by_clicking_register_you_agree_to_our_terms_nand_conditions">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="google">GOOGLE</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
</resources>