<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_top_background"
        style="@style/ViewBackgroundDark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/view_bottom_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <View
        android:id="@+id/view_bottom_background"
        style="@style/ViewBackgroundLight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top_background"
        app:layout_constraintVertical_weight="1"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_setting"
        style="@style/TextView.ColorWhite"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_64dp"
        android:contentDescription="@string/user_name"
        android:src="@mipmap/icon_foreground"
        android:foreground="@drawable/ring_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        style="@style/TextView.ColorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/user_name"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="@+id/ic_user"
        app:layout_constraintStart_toStartOf="@+id/ic_user"
        app:layout_constraintTop_toBottomOf="@id/ic_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_career"
        style="@style/TextView.ColorGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/career"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_home_address"
        style="@style/TextView.ColorGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/home_address"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_career"
        app:layout_constraintStart_toStartOf="@id/tv_career"
        app:layout_constraintTop_toBottomOf="@id/tv_career" />

    <LinearLayout
        android:id="@+id/linearLayout_main_netButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_main_bottomBtnContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top_background">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_instagram"
            style="@style/Button.ButtonFullWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/in_foreground"
            app:backgroundTint="@android:color/transparent"
            app:iconGravity="textStart"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_facebook"
            style="@style/Button.ButtonFullWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/f_foreground"
            app:iconGravity="textStart"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_vk"
            style="@style/Button.ButtonFullWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@android:color/transparent"
            app:icon="@drawable/vk_foreground"
            app:iconGravity="textStart"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_main_bottomBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_go_to_setting"
            style="@style/TextView.ColorNavy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/go_to_settings_and_fill_out_the_profile"
            android:textSize="@dimen/text_size_14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textAllCaps="false"
            android:theme="@style/Button.ButtonNavyStroke"
            app:backgroundTint="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_my_contacts"
            android:theme="@style/Button.ButtonFullOrange" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
